add: Company CRUD and swagger documentation
